--- a/Home.html
+++ b/Home.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode">
+  <body class="u-body u-xl-mode">
     <section class="u-clearfix u-image u-section-1" id="carousel_8a8b" data-image-width="1980" data-image-height="1320">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-gutter-100 u-layout-wrap u-layout-wrap-1">
